--- a/src/main/resources/at/ac/fhcampuswien/AZEApplication/login.fxml
+++ b/src/main/resources/at/ac/fhcampuswien/AZEApplication/login.fxml
@@ -19,6 +19,7 @@
                   <Image url="@../../../../../../../Images/loginart.jpg" />
                </image>
             </ImageView>
+            <Button fx:id="registerEmployeeButton" layoutX="28.0" layoutY="529.0" mnemonicParsing="false" onAction="#registerButtonOnClick" prefHeight="25.0" prefWidth="188.0" style="-fx-background-color: #5534;" text="register employee as Admin" textFill="WHITE" />
          </children>
       </AnchorPane>
    </left>
@@ -43,7 +44,7 @@
             <PasswordField fx:id="passwordTextField" layoutX="189.0" layoutY="348.0" promptText="Enter your password" />
             <TextField fx:id="usernameTextField" layoutX="189.0" layoutY="304.0" promptText="Enter your username" />
             <Button fx:id="loginButton" layoutX="81.0" layoutY="428.0" mnemonicParsing="false" onAction="#loginButtonOnClick" prefHeight="25.0" prefWidth="261.0" style="-fx-background-color: #417274;" text="LOG IN" textFill="WHITE" />
-            <Button fx:id="cancelButton" layoutX="81.0" layoutY="480.0" mnemonicParsing="false" onAction="#cancelButtonOnClick" prefHeight="25.0" prefWidth="261.0" style="-fx-background-color: #417274;" text="CANCEL" textFill="WHITE" />
+            <Button fx:id="cancelButton" layoutX="81.0" layoutY="480.0" mnemonicParsing="false" onAction="#cancelButtonOnClick" prefHeight="25.0" prefWidth="261.0" style="-fx-background-color: #417274;" text="CANCEL &amp; EXIT" textFill="WHITE" />
             <Label fx:id="loginMessageLabel" layoutX="113.0" layoutY="393.0" textFill="#cd0000">
                <font>
                   <Font size="14.0" />
