--- a/src/main/resources/at/ac/fhcampuswien/AZEApplication/register.fxml
+++ b/src/main/resources/at/ac/fhcampuswien/AZEApplication/register.fxml
@@ -9,48 +9,55 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="588.0" prefWidth="800.0" style="-fx-background-color: FFFFFFFFF;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.ac.fhcampuswien.AZEApplication.registerController">
    <children>
       <AnchorPane prefHeight="123.0" prefWidth="800.0">
          <children>
-            <ImageView fx:id="registerImageView" fitHeight="221.0" fitWidth="800.0" layoutX="-3.0" layoutY="-56.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="registerImageView" fitHeight="211.0" fitWidth="800.0" layoutX="-1.0" layoutY="-31.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../../../../../../Images/registerArt.png" />
                </image>
             </ImageView>
-            <Label layoutX="32.0" layoutY="26.0" prefHeight="37.0" prefWidth="394.0" text="Employee registration" textFill="WHITE">
+            <Label layoutX="31.0" layoutY="47.0" prefHeight="37.0" prefWidth="394.0" text="Employee registration" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="28.0" />
                </font>
             </Label>
+            <Label fx:id="registerMessageLabel" alignment="CENTER" layoutX="211.0" layoutY="149.0" prefHeight="17.0" prefWidth="360.0" textAlignment="CENTER" textFill="#5da853" />
          </children>
       </AnchorPane>
-      <Label layoutX="220.0" layoutY="177.0" text="First name">
+      <Label layoutX="220.0" layoutY="164.0" text="First name">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <Label layoutX="220.0" layoutY="248.0" text="Last name">
+      <Label layoutX="220.0" layoutY="228.0" text="Last name">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <Label layoutX="220.0" layoutY="318.0" text="Username">
+      <Label layoutX="220.0" layoutY="289.0" text="Username">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <Label layoutX="222.0" layoutY="388.0" text="Password">
+      <Label layoutX="222.0" layoutY="354.0" text="Password">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <TextField fx:id="firstnameTextField" layoutX="219.0" layoutY="203.0" prefHeight="25.0" prefWidth="360.0" promptText="First name" />
-      <TextField fx:id="lastnameTextField" layoutX="219.0" layoutY="273.0" prefHeight="25.0" prefWidth="360.0" promptText="Last name" />
-      <TextField fx:id="usernameTextField" layoutX="218.0" layoutY="342.0" prefHeight="25.0" prefWidth="360.0" promptText="Employee log in username" />
-      <Button fx:id="closeButton" layoutX="439.0" layoutY="472.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="140.0" style="-fx-background-color: #276969;" text="Cancel and go back" textFill="WHITE" />
-      <Button fx:id="registerButton" layoutX="222.0" layoutY="471.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="140.0" style="-fx-background-color: #276969;" text="Register Employee" textFill="WHITE" />
-      <PasswordField fx:id="passwordTextField" layoutX="218.0" layoutY="416.0" prefHeight="25.0" prefWidth="360.0" promptText="employee log in password" />
+      <TextField fx:id="firstnameTextField" layoutX="219.0" layoutY="187.0" prefHeight="25.0" prefWidth="360.0" promptText="First name" />
+      <TextField fx:id="lastnameTextField" layoutX="219.0" layoutY="253.0" prefHeight="25.0" prefWidth="360.0" promptText="Last name" />
+      <TextField fx:id="usernameTextField" layoutX="218.0" layoutY="313.0" prefHeight="25.0" prefWidth="360.0" promptText="Employee log in username" />
+      <Button fx:id="closeButton" layoutX="439.0" layoutY="519.0" mnemonicParsing="false" onAction="#closeButtonOnClick" prefHeight="29.0" prefWidth="140.0" style="-fx-background-color: #276969;" text="Cancel and go back" textFill="WHITE" />
+      <Button fx:id="registerButton" layoutX="222.0" layoutY="519.0" mnemonicParsing="false" onAction="#registerButtonOnClick" prefHeight="29.0" prefWidth="140.0" style="-fx-background-color: #276969;" text="Register Employee" textFill="WHITE" />
+      <PasswordField fx:id="passwordTextField" layoutX="218.0" layoutY="380.0" prefHeight="25.0" prefWidth="360.0" promptText="employee log in password" />
+      <Label layoutX="219.0" layoutY="420.0" text="Confirm Password">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <PasswordField fx:id="confirmPasswordTextField" layoutX="218.0" layoutY="445.0" prefHeight="25.0" prefWidth="360.0" promptText="confirm employee log in password" />
+      <Label fx:id="confirmPasswordLabel" alignment="CENTER" layoutX="224.0" layoutY="475.0" prefHeight="20.0" prefWidth="360.0" textAlignment="CENTER" textFill="#a65353" />
    </children>
 </AnchorPane>
