--- a/src/main/resources/at/ac/fhcampuswien/AZEApplication/userTimesheet.fxml
+++ b/src/main/resources/at/ac/fhcampuswien/AZEApplication/userTimesheet.fxml
@@ -2,6 +2,8 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -35,5 +37,19 @@
       </Label>
       <Label fx:id="queryStatusLabel" layoutX="420.0" layoutY="495.0" textFill="#336b43" />
       <Label fx:id="warningLabel" layoutX="380.0" layoutY="496.0" textAlignment="CENTER" textFill="#cd3939" />
+      <Button fx:id="exportButton" layoutX="400.0" layoutY="458.0" mnemonicParsing="false" onAction="#exportButtonOnClick" prefHeight="25.0" prefWidth="165.0" style="-fx-background-color: #417274;" text="refresh" textFill="WHITE" />
+      <Label layoutX="438.0" layoutY="37.0" text="Work timesheet">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <TableView fx:id="timesheetTable" layoutX="242.0" layoutY="89.0" prefHeight="349.0" prefWidth="517.0">
+        <columns>
+          <TableColumn fx:id="col_username" prefWidth="100.0" text="Username" />
+          <TableColumn fx:id="col_event_type" prefWidth="125.0" text="event_type" />
+            <TableColumn fx:id="col_date" prefWidth="125.0" text="date" />
+            <TableColumn fx:id="col_comment" prefWidth="166.0" text="comment" />
+        </columns>
+      </TableView>
    </children>
 </AnchorPane>
